--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
+/vendor/bundle
 
 # Ignore all environment files (except templates).
 /.env*
@@ -38,3 +39,4 @@
 !/app/assets/builds/.keep
 
 /node_modules
+/vendor/bundle
