Railsサーバー立ち上げ

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,12 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: db
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: password
 
 development:
   <<: *default
@@ -82,5 +85,3 @@ test:
 production:
   <<: *default
   database: parts_sync_production
-  username: parts_sync
-  password: <%= ENV["PARTS_SYNC_DATABASE_PASSWORD"] %>
