--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -1,60 +1,53 @@
-# This workflow uses actions that are not certified by GitHub.  They are
-# provided by a third-party and are governed by separate terms of service,
-# privacy policy, and support documentation.
-#
-# This workflow will install a prebuilt Ruby version, install dependencies, and
-# run tests and linters.
 name: "Ruby on Rails CI"
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]  # mainブランチへのプッシュをトリガーにする
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]  # mainブランチへのプルリクエストをトリガーにする
 jobs:
   test:
-    runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:11-alpine
-        ports:
-          - "5432:5432"
-        env:
-          POSTGRES_DB: rails_test
-          POSTGRES_USER: rails
-          POSTGRES_PASSWORD: password
-    env:
-      RAILS_ENV: test
-      DATABASE_URL: "postgres://rails:password@postgres:5432/rails_test"
+    runs-on: ubuntu-latest  # テストジョブは最新のUbuntuで実行
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      # Add or replace dependency steps here
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
-        with:
-          bundler-cache: true
-      # Add or replace database setup steps here
-      - name: Set up database schema
-        run: bin/rails db:schema:load
-      # Add or replace test runners here
-      - name: Run tests
-        run: bin/rake
+        uses: actions/checkout@v4  # コードをチェックアウトするアクションを使用
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1  # Docker Buildxをセットアップするアクションを使用
+
+      - name: Build and run tests
+        run: |
+          # Dockerコンテナをビルド
+          docker-compose build
+          docker-compose run --rm web bash -c "
+            # 必要なGemをインストール
+            bundle install && \
+            # データベースを作成し、スキーマをロード
+            bin/rails db:create db:schema:load && \
+            # Railsのテストを実行
+            bundle exec rails test && \
+            # システムテストを実行
+            bundle exec rails test:system
+          "
 
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # リントジョブも最新のUbuntuで実行
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
-        with:
-          bundler-cache: true
-      - name: Generate binstubs
-        run: bundle binstubs bundler-audit brakeman rubocop
-      # Add or replace any other lints here
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: bin/rubocop --parallel
+        uses: actions/checkout@v4  # コードをチェックアウトするアクションを使用
+
+      - name: Build and run linters
+        run: |
+          # Dockerコンテナをビルド
+          docker-compose build
+          docker-compose run --rm web bash -c "
+            # 必要なGemをインストール
+            bundle install && \
+            # Linter用のバイナリを生成
+            bundle binstubs bundler-audit brakeman rubocop && \
+            # bundler-auditで脆弱性をチェック
+            bin/bundler-audit --update && \
+            # brakemanでセキュリティチェック
+            bin/brakeman -q -w2 && \
+            # rubocopでコードスタイルをチェック
+            bin/rubocop --parallel
+          "
