--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1  # Docker Buildxをセットアップするアクションを使用
 
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker-compose
+
       - name: Build and run tests
         run: |
           # Dockerコンテナをビルド
